--- a/app-frontend/package.json
+++ b/app-frontend/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "aws-amplify": "^6.15.4",
     "framer-motion": "^12.23.6",
+    "lucide-react": "^0.534.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0",
